<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:clickable="true"
    tools:context=".FullscreenActivity"
    android:focusable="true"
    android:onClick="backgroundClick">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:keepScreenOn="true"
        android:padding="100dp"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/down_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|start"
        android:keepScreenOn="true"
        android:padding="50dp"
        android:text="@string/down_left"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/down_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:keepScreenOn="true"
        android:padding="50dp"
        android:text="@string/down_right"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</FrameLayout>